debug_logs/cabal_test_20251001_230745.log
Build profile: -w ghc-9.6.3 -O1
In order, the following will be built (use -v for more details):
 - fluxus-0.1.0.0 (lib) (first run)
 - fluxus-0.1.0.0 (test:fluxus-test) (first run)
Preprocessing library for fluxus-0.1.0.0..
Building library for fluxus-0.1.0.0..

src/Fluxus/CodeGen/CPP.hs:1:1: error: [GHC-28623]
    File name does not match module name:
    Saw     : ‘Main’
    Expected: ‘Fluxus.CodeGen.CPP’
  |
1 | {-# LANGUAGE OverloadedStrings #-}
  | ^

src/Fluxus/Debug/Logger.hs:13:5: error: [GHC-58481]
    parse error on input ‘setBreakpoint’
   |
13 |     setBreakpoint
   |     ^^^^^^^^^^^^^
Error: cabal: Failed to build fluxus-0.1.0.0 (which is required by
test:fluxus-test from fluxus-0.1.0.0).

